--- a/Learn  with JS/index.html
+++ b/Learn  with JS/index.html
@@ -17,7 +17,7 @@
     <span class="simple-text">Text 2</span>
     <span class="simple-text">Text 3</span> -->
 
-    <form id="main-form" onsubmit="return checkForm(this)" method="post">
+<!--     <form id="main-form" method="post">
         <label for="name">Имя:</label>
         <input type="text" name="name" placeholder="Введите имя" id="name"><br><br>
         <label for="password">Пароль:</label>
@@ -31,8 +31,10 @@
         <label for="female">Женский</label><br><br>
         <input type="submit" name="sumbit" value="Готово"><br><br>
         <div id="Error" style="color: red"></div>
-    </form>
+    </form> -->
 
+
+    
     <script src="js/main.js"></script>
 </body>
 </html>
